<resources>
    <string name="app_name">Android Suitmedia Test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="no_data">Data Not Available</string>
    <string name="retry">Retry</string>
    <string name="selected_user_name">Selected User Name</string>
</resources>