<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".ui.FirstScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPalindrome"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/palindrome"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheck"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/blue_green"
            android:textColor="@color/white"
            android:text="@string/check"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/blue_green"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/next"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>