<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondScreenActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:title="Second Screen"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@color/black_2" />
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_2"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="start"
        android:text="@string/welcome"
        android:textColor="@color/black_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="start"
        tools:text="John Doe"
        android:textColor="@color/black_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/selected_user_name"
        android:textColor="@color/black_2"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/blue_green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/choose_a_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
